--- a/dessert-ordering-system/src/main/resources/static/Contact.html
+++ b/dessert-ordering-system/src/main/resources/static/Contact.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>BiteNow Contact</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
+</head>  
+<body>
+    <h1>Bite Now</h1>
+    <table>
+        <tr>
+            <td width="20%">
+                <ul>
+                    <li><a herf= >HOME</a></li>
+                    <li><a herf= >Prodecut</a></li>
+                    <li><a herf= >Contact</a></li>
+                </ul>
+            </td>
+            <td width="80%">
+              
+            </td>
+        </tr>
+    </table>  
+</body>
+</html>
