--- a/dessert-ordering-system/src/main/resources/static/Contact.html
+++ b/dessert-ordering-system/src/main/resources/static/Contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>BiteNow Contact</title>
+    <title>BiteNow</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
@@ -14,9 +14,9 @@
         <tr>
             <td width="20%">
                 <ul>
-                    <li><a herf= >HOME</a></li>
-                    <li><a herf= >Prodecut</a></li>
-                    <li><a herf= >Contact</a></li>
+                    <li><a herf= "index.html">HOME</a></li>
+                    <li><a herf= "Product.html">Prodecut</a></li>
+                    <li><a herf= "Contact.html">Contact</a></li>
                 </ul>
             </td>
             <td width="80%">
