Update and rename Contact.html to contact.html

--- a/dessert-ordering-system/src/main/resources/static/contact.html
+++ b/dessert-ordering-system/src/main/resources/static/contact.html
@@ -15,8 +15,8 @@
             <td width="20%">
                 <ul>
                     <li><a herf= "index.html">HOME</a></li>
-                    <li><a herf= "Product.html">Prodecut</a></li>
-                    <li><a herf= "Contact.html">Contact</a></li>
+                    <li><a herf= "product.html">Prodecut</a></li>
+                    <li><a herf= "contact.html">Contact</a></li>
                 </ul>
             </td>
             <td width="80%">
