--- a/dessert-ordering-system/src/main/resources/static/index.html
+++ b/dessert-ordering-system/src/main/resources/static/index.html
@@ -14,9 +14,9 @@
         <tr>
             <td width="20%">
                 <ul>
-                    <li><a herf= >HOME</a></li>
-                    <li><a herf= >Prodecut</a></li>
-                    <li><a herf= >Contact</a></li>
+                    <li><a herf= "index.html">HOME</a></li>
+                    <li><a herf= "product.html">Prodecut</a></li>
+                    <li><a herf= "contact.html">Contact</a></li>
                 </ul>
             </td>
             <td width="80%">
