--- a/dessert-ordering-system/src/main/resources/static/index.html
+++ b/dessert-ordering-system/src/main/resources/static/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>BiteNow</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>  
 <body>
-    <h1>Bite Now</h1>
+    <h1>Welcome! Bite Now</h1>
+
     <table>
         <tr>
             <td width="20%">
